[package]
name = "rust-candle-images"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
candle = { git = "https://github.com/huggingface/candle.git", version = "0.3.0", package = "candle-core" }
candle-datasets = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-transformers = {git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0", optional = true }
anyhow = "1.0.75"
hf-hub = "0.3.2"
